src/objects/Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Param_1_Name__c</fullName>
        <label>Param 1 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_1_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Param 1 Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Param_1_Value__c</fullName>
        <label>Param 1 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_2_Name__c</fullName>
        <label>Param 2 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_2_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Param 2 Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Param_2_Value__c</fullName>
        <label>Param 2 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_3_Name__c</fullName>
        <label>Param 3 Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Param_3_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Param 3 Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Param_3_Value__c</fullName>
        <label>Param 3 Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_URL__c</fullName>
        <label>Vendor URL</label>
        <type>Url</type>
    </fields>
    <label>Vendor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vendor</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>